# deep_research_demo

./: README.md  config.yaml  main.py  pyproject.toml
.omx/: metrics.json
.omx/logs/: notify-fallback-2026-04-07.jsonl  omx-2026-04-07.jsonl  session-history.jsonl
.omx/state/: hud-state.json  notify-fallback-state.json  update-check.json
src/deerflow_demo/: hello.py
src/langchain_demo/: agent.py  promot.py  test.py
src/models/: chat_model.py
src/promot/: meta.py
